--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -13,9 +13,16 @@
             <h1>{{thisSession.nom}}</h1>
             {% set difference = thisSession.dateDebut.diff(thisSession.dateFin) %}
             <div class="mt-4">
+                {% set comp = ""  %}
+                {% set places = thisSession.nbPlaces - thisSession.stagiaires | length %}
+                {% if places == 0 %}
+                    {% set comp = "errors" %}
+                    {% set places = 'formation complète' %}
+                    
+                {% endif %}
                 <p class="text-center alert alert-dark">Du {{thisSession.dateDebut| date("d/m/Y")}} au {{thisSession.dateFin| date("d/m/Y")}} soit  {{difference.m}} mois et {{difference.d}} jours</p>
                 <div class="flex align-middle" >
-                    <span class="alert alert-dark">nb places : {{thisSession.nbPlaces}} - places restantes : {{thisSession.nbPlaces - thisSession.stagiaires | length}} </span>
+                    <span class="alert alert-dark">nb places : {{thisSession.nbPlaces}} - places restantes :<span class={{comp}}> {{places}} </span></span>
                     {% if thisSession.programmes | length == 0 %}
                     <a class="text-center alert alert-dark" href="{{path('CreaProgramme',{id:thisSession.id})}}">Créer un programme de formation</a>
                     {% else %}
@@ -89,6 +96,7 @@
         {% endif %}
         {{ form_start(form) }}
         <div class="liststag">
+            <h4>Ajouter ou supprimer satgiaire</h4>
             <div class="flex list_stag">
                 {% for stagiaire in form.stagiaires %}
                 {% if thisSession.nbPlaces - thisSession.stagiaires| length <= 0 %}
