--- a/templates/stagiaire/detailStagiaire.html.twig
+++ b/templates/stagiaire/detailStagiaire.html.twig
@@ -6,10 +6,7 @@
 <div class="rounded p-1 bg-light text-dark stagiaire mt-3 w-50">
     <a class="rounded d-inline-block p-1 mt-1 mb-2 bg-dark text-white" href="{{path('updateStagiaire',{id:stagiaire.id})}}">Modifier</a>
     {% set dateCrea = stagiaire.createdate|date("d/m/Y") %}
-    {{dateCrea}}
-        
-   
-    <span>Inscrit le : {{stagiaire.createdate|date("d/m/Y")}}</span>
+    <span>Inscrit le : {{dateCrea}}</span>
     <h1><span class="avatar  mr-5">
         <img src="{{asset('img/'~stagiaire.photo)}}" alt="">
     </span><span>Fiche stagiaire</span></h1>
@@ -31,7 +28,6 @@
     <ul>
         {% for session in stagiaire.sessions %}
         <li>
-            {{session.id}}
             <td><a class="text-dark" href="{{path('programme',{id:session.id})}}">{{session.nom}}</i></a></td>
         </li>
             
