--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,8 @@
                 {% block nav %}
                 <a class="p-1 mb-4 bg-light text-dark rounded" href="{{path('home')}}">Liste des sessions</a>
                 <a class="p-1 mb-4 bg-light text-dark rounded" href="{{path('stagiaire')}}">Liste des stagiaires</a>
-                <a class="rounded p-1 mb-4 bg-light text-dark"href="{{path('addStagiaire')}}">Ajouter un stagiaire</a>
+                <a class="rounded p-1 mb-4 bg-light text-dark"href="{{path('addStagiaire')}}">Ajouter un stagiaire</a>                
+                <a class="rounded p-1 mb-4 bg-light text-dark"href="{{path('affich_module')}}">liste des modules</a>
                 {% endblock %}
             </nav>
         </div> 
