--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
         {% endblock %}
     </head>
     <body>
+        {% block test %}
         <div id="slide">
             <nav class=" d-flex justify-content-start flex-column navbar-dark bg-dark p-3" style="background-color: #e3f2fd;">
                 {% block nav %}
@@ -28,8 +29,12 @@
             Actuellement {{ session|length }} {% if session|length >0 %}sessions {% else %}session{% endif %}
             en cours.
         </h4>
+        <h4 style="position: fixed; top:0">{{ "now"|date("d/m/Y") }}</h4>
+            
+        {% endblock %}
         <div class="wrapper">
-            <h4 style="position: fixed; top:0">{{ "now"|date("d/m/Y") }}</h4>
+            {% block toto %}
+                
             <div id="errors">
                 {% for message in app.flashes('error') %}
                     <p class="errors">{{ message }}</p>
@@ -40,10 +45,12 @@
                     <p class="success">{{ message }}</p>
                 {% endfor %}
             </div>
-            <header>
-                <i class="modileMenu fas fa-bars"></i>
-            </header>
-            {% block body %}{% endblock %}
+            {% endblock %}
+                <header>
+                    <i class="modileMenu fas fa-bars"></i>
+                </header>
+            {% block body %}
+            {% endblock %}
 
         </div>
         {% block javascripts %}
