--- a/templates/stagiaire/detailStagiaire.html.twig
+++ b/templates/stagiaire/detailStagiaire.html.twig
@@ -28,7 +28,10 @@
     <ul>
         {% for session in stagiaire.sessions %}
         <li>
-            <td><a class="text-dark" href="{{path('programme',{id:session.id})}}">{{session.nom}}</i></a></td>
+            <div>
+                <a class="text-dark" href="{{path('programme',{id:session.id})}}">{{session.nom}}</i></a> - 
+                <a class="text-dark" href="{{path('acme_demo_pdf',{id:session.id,id_stagiaire:stagiaire.id})}}">Génerer une attestation de formation</i></a>
+            </div>
         </li>
             
         {% endfor %}
