--- a/templates/stagiaire/index.html.twig
+++ b/templates/stagiaire/index.html.twig
@@ -61,7 +61,10 @@
                                     <h2>Sessions prévues</h2>
                                     <p>
                                         {% for session in stagiaire.sessions %}
-                                            <p><a class="text-dark" href="{{path('programme',{id:session.id})}}">{{session.nom}}</i></a></p>
+                                            <p>
+                                                <a class="text-dark" href="{{path('programme',{id:session.id})}}">{{session.nom}}</i></a> -                                                  
+                <a class="text-dark" href="{{path('acme_demo_pdf',{id:session.id,id_stagiaire:stagiaire.id})}}">Génerer une attestation de formation</i></a>
+                                            </p>
                                         {% endfor %}
                                     </p>
                                 </div>
