--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="shortcut icon" type="image/png" href="../logo.png"/>
+        <link rel="shortcut icon" type="image/png" href="{{asset('img/logo.png')}}"/>
         {% block stylesheets %}
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -28,9 +28,7 @@
         <h4 style="text-align: right;padding:0 1em;">
             Actuellement {{ session|length }} {% if session|length >0 %}sessions {% else %}session{% endif %}
             en cours.
-        </h4>
-        <h4 style="position: fixed; top:0">{{ "now"|date("d/m/Y") }}</h4>
-            
+        </h4>            
         {% endblock %}
         <div class="wrapper">
             {% block toto %}
