--- a/templates/stagiaire/index.html.twig
+++ b/templates/stagiaire/index.html.twig
@@ -63,7 +63,7 @@
                                         {% for session in stagiaire.sessions %}
                                             <p>
                                                 <a class="text-dark" href="{{path('programme',{id:session.id})}}">{{session.nom}}</i></a> -                                                  
-                <a class="text-dark" href="{{path('acme_demo_pdf',{id:session.id,id_stagiaire:stagiaire.id})}}">Génerer une attestation de formation</i></a>
+                                                <a class="text-dark" href="{{path('acme_demo_pdf',{id:session.id,id_stagiaire:stagiaire.id})}}">Génerer une attestation de formation</i></a>
                                             </p>
                                         {% endfor %}
                                     </p>
@@ -77,6 +77,7 @@
                     <td class="align-middle">{{stagiaire.prenom|capitalize}}</td>
                     <td class="align-middle" width="15%">
                         <a class="border rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" href="{{path('/stagiaire/detailStagiaire',{id:stagiaire.id})}}"><i class="fas fa-user"></i></a>
+                        <a class="border rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" href="{{path('updateStagiaire',{id:stagiaire.id})}}"><i class="far fa-edit"></i></a>
                         <a data-id="{{stagiaire.id}}" class="delStagiaire border rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" href="{{path('stagiaire_delete')}}"><i class="far fa-trash-alt"></i></a>
                     </td>
                 </tr>
