--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
     <body>
         {% block test %}
         <div id="slide">
-            <nav class=" d-flex justify-content-start flex-column navbar-dark bg-dark p-3" style="background-color: #e3f2fd;">
+            <nav class=" d-flex justify-content-evenly  navbar-dark bg-dark p-3" style="background-color: #e3f2fd;">
                 {% block nav %}
                 <a class="p-1 mb-4 bg-light text-dark rounded" href="{{path('home')}}">Liste des sessions</a>
                 <a class="p-1 mb-4 bg-light text-dark rounded" href="{{path('stagiaire')}}">Liste des stagiaires</a>
@@ -24,11 +24,7 @@
             </nav>
         </div> 
         {% set session = app.session.get('sessions') %}
-        
-        <h4 style="text-align: right;padding:0 1em;">
-            Actuellement {{ session|length }} {% if session|length >0 %}sessions {% else %}session{% endif %}
-            en cours.
-        </h4>            
+                
         {% endblock %}
         <div class="wrapper">
             {% block toto %}
