modif duree module

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
         {% set session = app.session.get('sessions') %}
                 
         {% endblock %}
-        <div class="wrapper">
+        <div class="wrapper container">
             {% block toto %}
                 
             <div id="errors">
