--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -48,7 +48,10 @@
                         {% for programme in cat  %}
                         <tr id="programme_{{programme.id}}">
                             <td>{{programme.module.nom}}</td>
-                            <td>{{programme.duree}}</td>
+                            <td>
+                                {{programme.duree}}
+                                <a class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" href="{{path('ModifDuree',{id:programme.id,id_session:thisSession.id})}}"><i class="far fa-edit"></i></a>
+                            </td>
                             <td width="15%">
                                 <a data-id="{{programme.id}}" data-session="{{thisSession.id}}" class="delProgramme border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" href="{{path('programme_delete')}}"><i class="far fa-trash-alt"></i></a>
                                 <a class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" href="{{path('ModifModule',{id:programme.module.id})}}"><i class="far fa-edit"></i></a>
@@ -118,7 +121,7 @@
                     <td></td>
                 </tr>
                 {% endfor %}
-                <!-- <input class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" type="submit"> -->
+                <input class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" type="submit">
                 
             </tbody>
         </table>
